--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,8 @@ project(DataStruct)
 set(CMAKE_CXX_STANDARD 23)
 
 
-add_executable(DataStruct main.cpp)
-add_executable(DataStruct-LinearList LinearList.cpp)
-add_executable(DataStruct-BiTree BiTree.cpp)
+#add_executable(DataStruct main.cpp)
+add_executable(LinearList LinearList.cpp)
+add_executable(BiTree BiTree.cpp)
+add_executable(Tree Tree.cpp)
+add_executable(Graph Graph.cpp)
