--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,3 +9,4 @@ add_executable(LinearList LinearList.cpp)
 add_executable(BiTree BiTree.cpp)
 add_executable(Tree Tree.cpp)
 add_executable(Graph Graph.cpp)
+add_executable(test test.cpp)
