--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,4 +9,5 @@ add_executable(LinearList LinearList.cpp)
 add_executable(BiTree BiTree.cpp)
 add_executable(Tree Tree.cpp)
 add_executable(Graph Graph.cpp)
+add_executable(Sort Sort.cpp)
 add_executable(test test.cpp)
